# quantum-dot-designer

./: .gitignore  QuantumDotDesigner.py  README.md  chip_layout.GDS  pyproject.toml  qdd_example_notebook.html  qdd_example_notebook.ipynb  qdd_example_script.py  qdd_example_script_clavier_gates.py  requirements.txt
QuantumDotDesigner/: BaseCollection.py  QuantumDotArray.py  QuantumDotArrayComponents.py  QuantumDotArrayElements.py  QuantumDotDesigner.py  __init__.py
QuantumDotDesigner/base/: Component.py  Element.py  ElementBase.py  Layer.py  PlotMixin.py  Sublattice.py  UnitCell.py  __init__.py
QuantumDotDesigner/components/: Clavier.py  FanOutLine.py  Sensor.py  __init__.py
QuantumDotDesigner/elements/: ArbitraryPolygon.py  Barrier.py  BasicPolygon.py  ClavierGate.py  FanOutLineBase.py  FanOutLineCoarse.py  FanOutLineFine.py  Ohmic.py  Plunger.py  ScreeningGate.py  __init__.py
QuantumDotDesigner/fanout/: Fanout.py  FanoutGenerator.py  FanoutPoints.py  __init__.py
base/: Element.py  PlotMixin.py  Sublattice.py  UnitCell.py
elements/: Barrier.py  ClavierGate.py  FanOutLineBase.py  FanOutLineCoarse.py  FanOutLineFine.py  Ohmic.py  Plunger.py  ScreeningGate.py
example_notebooks/: qdd_example_script.py  qdd_example_script_2x2.py  qdd_example_script_2x2_vias.py  qdd_example_script_clavier_gates.py  verification_qdd_example_script_clavier_gates.py
fanout/: FanoutGenerator.py
helpers/: helpers.py
instructions/: adding_new_elements.md  installation_guide.md  qdd_example_notebook.ipynb
quantum_dot_designer/: BaseCollection.py  QuantumDotArray.py  __init__.py
(+29 files in other folders)
